# ctcrab

./: .env  .gitignore  Cargo.toml  Rocket.toml  build.rs
doc/: update_process.md
html/: .gitignore  icomoon.json  package-lock.json  package.json  rollup.config.js
html/.devcontainer/: Dockerfile  devcontainer.json
html/src/: backend-api.ts  backend-config.json  humantime.ts  service-worker.ts
html/src/components/: Heading.svelte  Loglist.svelte  LoglistEntry.svelte  Topbar.svelte
html/src/routes/: _error.svelte  index.svelte
html/src/routes/log/: [log_id].svelte
html/static/: global.css
migrations/postgresql/2020-08-10-224707_init/: down.sql  up.sql
migrations/sqlite/2020-08-10-224707_init/: down.sql  up.sql
src/: core.rs  main.rs  models.rs  populate_ctlogs_table.rs  schema.rs
src/api/: mod.rs
src/core/: context.rs  db.rs  initialise_ctlogs_table.rs  mod.rs  update_thread.rs
src/models/: bytea_t.rs  inserts.rs  mod.rs
src/models/inserts/: mod.rs
templates/: error.hbs  index.hbs  layout.sass  log.hbs
