[package]
name = "ctcrab"
version = "0.1.0"
authors = ["Mao <m@maowtm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctclient = { path = "../ctclient" }
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres", "sqlite", "r2d2"], default-features = false }
dotenv = "0.15.0"
serde = { version = "1.0.115", features = ["derive"] }
base64 = "0.12.3"
serde_json = "1.0.57"
env_logger = "0.7.1"

[[bin]]
name = "populate_ctlogs_table"
path = "src/populate_ctlogs_table.rs"
